cleanup, fix one spacing bug

--- a/src/styles/PostersGrid.module.css
+++ b/src/styles/PostersGrid.module.css
@@ -7,7 +7,7 @@
 }
 
 .posterImage,
-.detailRow {
+.detailsRow {
   display: block;
   position: absolute;
   will-change: transform, width, height, opacity;
@@ -30,13 +30,13 @@
   box-shadow: inset 0 0 1.5px #999;
 }
 
-.detailRow {
+.detailsRow {
   margin: 0 -10px;
   transform-origin: top;
 }
 
 @media (min-width: 850px) {
-  .detailRow {
+  .detailsRow {
     margin: 0 -25px;
   }
 }
